--- a/panel/panel-frontend/package.json
+++ b/panel/panel-frontend/package.json
@@ -12,10 +12,13 @@
     "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
     "vue": "^3.2.37",
-    "vue-router": "4"
+    "vue-router": "4",
+    "vue3-simple-alert-next": "^1.0.2"
   },
   "devDependencies": {
+    "@babel/types": "^7.18.13",
     "@vitejs/plugin-vue": "^3.0.3",
+    "tslib": "^2.4.0",
     "vite": "^3.0.7"
   }
 }
