--- a/panel/panel-frontend/tsconfig.json
+++ b/panel/panel-frontend/tsconfig.json
@@ -1,9 +1,9 @@
 { // 编译选项
   "compilerOptions": {
     // 编译输出目标 ES 版本
-    "target": "esnext",
+    "target": "ES6",
     // 采用的模块系统
-    "module": "esnext",
+    "module": "UMD",
     // 以严格模式解析
     "strict": false,
     "jsx": "preserve",
@@ -19,17 +19,19 @@
     // 定义一个变量就必须给它一个初始值
     "strictPropertyInitialization" : false,
     // 允许编译javascript文件
-    "allowJs": true,
+    "allowJs": false,
     // 是否包含可以用于 debug 的 sourceMap
     "sourceMap": true,
-    // 忽略 this 的类型检查, Raise error on this expressions with an implied any type.
-    "noImplicitThis": false,
+    // 为 this 提供 type check
+    "noImplicitThis": true,
+    "isolatedModules": true,
+    "maxNodeModuleJsDepth": 3,
     // 解析非相对模块名的基准目录 
     "baseUrl": ".",
     // 给错误和消息设置样式，使用颜色和上下文。
     "pretty": true,
     // 设置引入的定义文件
-    "types": ["webpack-env", "mocha", "chai"],
+    "types": [],
     // 指定特殊模块的路径
     "paths": {
       "@/*": ["src/*"]
@@ -47,8 +49,7 @@
     "src/**/*.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
-    "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "types/**/*.d.ts",
   ],
   // ts 排除的文件
   "exclude": ["node_modules"]
