--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "node app.js",
+    "start": "npm run build && node build/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dts": "npx -p typescript tsc --declaration --emitDeclarationOnly --outDir dts",
     "build": "npx -p typescript tsc"
