--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "express-session": "^1.17.3",
     "log4js": "^6.6.1",
     "mysql2": "2",
-    "sequelize": "6.6.2"
+    "sequelize": "^6.26.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
