--- a/panel/panel-frontend/package.json
+++ b/panel/panel-frontend/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@babel/types": "^7.18.13",
+    "@types/crypto-js": "^4.1.1",
     "@types/sequelize": "^4.28.14",
     "@vitejs/plugin-vue": "^3.0.3",
     "sequelize": "^6.26.0",
