--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "sequelize": "^6.26.0"
   },
   "devDependencies": {
+    "@types/async-exit-hook": "^2.0.0",
     "@types/express": "^4.17.14",
     "@types/express-session": "^1.17.5",
     "@types/node": "^18.11.9",
     "@types/validator": "^13.7.6",
+    "tslib": "^2.4.1",
     "typescript": "^4.9.3"
   }
 }
