--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "moduleResolution": "node",
     // 启用装饰器
     "experimentalDecorators": true,
-    "esModuleInterop": false,
+    "esModuleInterop": true,
     // 允许从没有设置默认导出的模块中默认导入
     "allowSyntheticDefaultImports": true,
     // 定义一个变量就必须给它一个初始值
