--- a/panel/panel-frontend/package.json
+++ b/panel/panel-frontend/package.json
@@ -22,6 +22,7 @@
     "@vitejs/plugin-vue": "^3.0.3",
     "sequelize": "^6.26.0",
     "tslib": "^2.4.0",
+    "typescript": "^4.9.4",
     "vite": "^3.0.7"
   }
 }
