--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "connect-session-sequelize": "^7.1.4",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
-    "express": "https://github.com/XieJiSS/express#v5.0.0-beta.1-fix",
+    "express": "https://github.com/XieJiSS/express#v5.0.0-beta.1-fix.1",
     "express-session": "^1.17.3",
     "log4js": "^6.6.1",
     "mysql2": "2",
