--- a/panel/panel-frontend/package.json
+++ b/panel/panel-frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
+    "typescript": "^5.0.0-dev.20230112",
     "vue": "^3.2.37",
     "vue-router": "^4.1.6",
     "vue3-simple-alert-next": "^1.0.2"
@@ -20,9 +21,10 @@
     "@types/crypto-js": "^4.1.1",
     "@types/sequelize": "^4.28.14",
     "@vitejs/plugin-vue": "^3.0.3",
+    "naive-ui": "^2.34.3",
     "sequelize": "^6.26.0",
     "tslib": "^2.4.0",
-    "typescript": "^4.9.4",
+    "vfonts": "^0.0.3",
     "vite": "^3.0.7"
   }
 }
