chore: cherry-pick from hw branch

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "prettier.insertPragma": true,
   "prettier.jsxSingleQuote": true,
   "volar.codeLens.scriptSetupTools": true,
-  "volar.autoCompleteRefs": true
+  "volar.autoCompleteRefs": true,
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
