--- a/panel/panel-frontend/package.json
+++ b/panel/panel-frontend/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "yarn run vite",
+    "build": "yarn run vite build",
+    "preview": "yarn run vite preview"
   },
   "dependencies": {
     "axios": "^0.27.2",
